# persona-agent-marketplace

./: README.md
agents/: index.json
agents/apeiria/: config.json
agents/arona/: config.json  systemPrompt.md
agents/asuka/: config.json
agents/atri/: config.json
agents/ayane/: config.json
agents/doctor-lu/: config.json  systemPrompt.md
agents/makise-kurisu/: config.json  systemPrompt.md
agents/murakumo/: config.json
agents/yoshino/: config.json
mcp/: index.json
mcp/cloud-music-mcp/: .gitignore  README.md  mcp.json
mcp/dida365/: mcp.json
mcp/everything/: mcp.json
mcp/fetch/: mcp.json
mcp/filesystem/: mcp.json
mcp/git/: mcp.json
mcp/memory/: mcp.json
mcp/notion/: mcp.json
mcp/open-meteo-mcp/: .gitignore  README.md  mcp.json  pyproject.toml
mcp/open-meteo-mcp/src/open_meteo_mcp/: __init__.py  __main__.py  client.py  schemas.py  server.py  tools.py
mcp/sequential-thinking/: mcp.json
mcp/ticktick-mcp-enhanced/: .gitignore  README.md  README_en.md  mcp.json
mcp/ticktick-mcp-enhanced/src/ticktick_mcp/: auth.py  client_manager.py  log.py  server.py  ticktick_client.py
mcp/ticktick-mcp-enhanced/src/ticktick_mcp/tools/: __init__.py  habit_tools.py  project_tools.py  query_tools.py  task_tools.py
mcp/ticktick-mcp-enhanced/src/ticktick_mcp/utils/: formatters.py  logging_utils.py  timezone.py  validators.py
mcp/time/: mcp.json
skills/: index.json
skills/diary-writing/: SKILL.md
skills/tech-news-digest/: SKILL.md
skills/test-sync/: SKILL.md
skills/ticktick-management/: SKILL.md
skills/weather-query/: SKILL.md
(+21 files in other folders)
