[project]
name = "open-meteo-mcp"
version = "1.6.1"
description = "Open-Meteo weather APIs MCP server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jonathan Zhang" }]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
open-meteo-mcp = "open_meteo_mcp.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pyright>=1.1.0",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["open_meteo_mcp*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
